--- a/styles.css
+++ b/styles.css
@@ -1,164 +1,54 @@
-
-* {
+body {
+    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-}
-
-.navbar {
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    position: sticky;
-    top: 0;
-    cursor: pointer;
+    background-color: #f4f4f4;
 }
-
-.background {
-    background: black;
-    background-blend-mode: darken;
-    background-size: cover;
+.profile-container {
+    display: flex;
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 100vw;
+    height: 100vh;
 }
-
-.nav-list {
-    width: 70%;
+.profile-image {
+    flex: 1;
     display: flex;
     align-items: center;
-}
-
-.logo {
-    display: flex;
     justify-content: center;
-    align-items: center;
 }
-
-.logo img {
-    width: 180px;
-    border-radius: 50px;
+.profile-image img {
+    width: 200px;
+    height: 200px;
+    border-radius: 10%;
+    object-fit: cover;
 }
-
-.nav-list li {
-    list-style: none;
-    padding: 26px 30px;
-}
-
-.nav-list li a {
-    text-decoration: none;
-    color: white;
-}
-
-.nav-list li a:hover {
-    color: grey;
-}
-
-.rightnav {
-    width: 30%;
-    text-align: right;
-}
-
-#search {
-    padding: 5px;
-    font-size: 17px;
-    border: 2px solid grey;
-    border-radius: 9px;
-}
-
-.firstsection {
-    background-color: green;
-    height: 400px;
-}
-
-.secondsection {
-    background-color: blue;
-    height: 400px;
-}
-
-.box-main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: black;
-    max-width: 80%;
-    margin: auto;
-    height: 80%;
-}
-
-.firsthalf {
-    width: 100%;
+.profile-info {
+    flex: 2;
+    padding: 40px;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
-
-.secondhalf {
-    width: 30%;
+.profile-info h2 {
+    margin: 0;
+    color: #333;
+    font-size: 32px;
 }
-
-.secondhalf img {
-    width: 70%;
-    border: 4px solid white;
-    border-radius: 150px;
-    display: block;
-    margin: auto;
-}
-
-.text-big {
-    font-family: 'Piazzolla', serif;
-    font-weight: bold;
-    font-size: 35px;
-}
-
-.text-small {
+.profile-info p {
     font-size: 18px;
+    color: #666;
 }
-
-.btn {
-    padding: 8px 20px;
-    margin: 7px 0;
-    border: 2px solid white;
-    border-radius: 8px;
-    background: none;
-    color: white;
-    cursor: pointer;
-}
-
-.btn-sm {
-    padding: 6px 10px;
-    vertical-align: middle;
-}
-
-.section {
-    height: 400px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    max-width: 90%;
-    margin: auto;
-}
-
-.section-Left {
-    flex-direction: row-reverse;
-}
-
-.paras {
-    padding: 0px 65px;
-}
-
-.thumbnail img {
-    width: 250px;
-    border: 2px solid black;
-    border-radius: 26px;
-    margin-top: 19px;
-}
-
-.center {
-    text-align: center;
-}
-
-.text-footer {
-    text-align: center;
-    padding: 30px 0;
-    font-family: 'Ubuntu', sans-serif;
-    display: flex;
-    justify-content: center;
-    color: white;
+.links a {
+    display: block;
+    text-decoration: none;
+    color: #007BFF;
+    font-size: 18px;
+    margin-top: 10px;
 }
